--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <div class="body_rituals__wrap">
                             <div class="card card__body-cards">
                                 <h3 class="body_rituals__title">Körperpackungen</h3>
-                                <img src="../src/img/himalaya-salz-massage.jpg" class="card-img-top" alt="...">
+                                <img src="./src/img/himalaya-salz-massage.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text">Sanft umhüllt und eingewickelt in pflegende Cremes und
                                         nährende Öle -
@@ -226,6 +226,7 @@
                                         <li class="body_rituals__list-item">Rassoul Rose und Geranie</li>
                                         <li class="body_rituals__list-item">Peeling-Salze</li>
                                         <li class="body_rituals__list-item">Moor</li>
+                                        
                                     </ul>
                                 </div>
                             </div>
@@ -459,7 +460,7 @@
                                 alt="...">
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Предыдущий</span>
@@ -468,7 +469,7 @@
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Следующий</span>
-                    </button>
+                    </button> -->
                 </div>
             </div>
         </section>
